[package]
name = "jupiter-client-proto"
version = "0.1.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "^0.21.0"
clap = "^2.33.0"
hex = "^0.3.1"
multiproof-rs = "^0.1.4"
account = { path = "../tree-precompiles-eth1/account"}
rlp = "0.4.4"
