[package]
name = "jupiter-client-proto"
version = "0.1.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = "^0.21.0"
clap = "^2.33.0"
hex = "^0.3.1"
multiproof-rs = "^0.1.7"
jupiter-account = "^0.1.4"
rlp = "0.4.4"
sha3 = "0.8.2"
libsecp256k1 = "0.3.5"
rand = "^0.7.3"
